minitrace-macro/tests/ui/err/has-too-many-arguments.stderr
error: expected `enter_on_poll = <bool>`
 --> tests/ui/err/has-too-many-arguments.rs:3:9
  |
3 | #[trace(a, b)]
  |         ^
