minitrace-macro/tests/ui/err/has-too-many-arguments.rs
use minitrace::trace;

#[trace(a, b)]
fn f() {}

fn main() {}
